Added default values for external task utils and replaced deprecated methods
Issue-ID: SO-3468
Change-Id: Ic8abb0728a43336cd4c6e1ed580e01ba8f0fbd17
Signed-off-by: Boslet, Cory (cb645j) <cb645j@att.com>